--- a/index.html
+++ b/index.html
@@ -39,13 +39,14 @@
             <br>
             <div id="buttons">
                 <button id="b2">
-                    <a href="/">LET'S Connect</a>
+                    <a href="https://www.linkedin.com/in/aditya-shriwal2132">Let's Connect</a>
                 </button>
             </div>
         </div>
         <div class="image">
-            <img src="https://th.bing.com/th/id/OIP.dEYzZac4OgE8gIFfosZPvQHaHa?w=193&h=192&c=7&r=0&o=5&dpr=1.3&pid=1.7"
-                alt="Aditya's profile Photo">
+            <!-- <img src="https://th.bing.com/th/id/OIP.dEYzZac4OgE8gIFfosZPvQHaHa?w=193&h=192&c=7&r=0&o=5&dpr=1.3&pid=1.7"
+                alt="Aditya's profile Photo"> -->
+                <img src="images/Firefly 20231219155648.png" alt="Aditya's profile photo">
         </div>
     </div>
     <div id="space">
@@ -55,12 +56,7 @@
         <div id="left">
             <div class="text2">
                 <h1>My Skills</h1>
-                <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet ipsam molestias suscipit mollitia
-                    provident ducimus. Unde sint, non repudiandae et vitae quos quam ullam hic suscipit beatae!
-                    Voluptatibus, nostrum sequi.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos autem officia recusandae minus
-                    aspernatur suscipit est temporibus necessitatibus. Quasi sed ratione accusamus fugit nemo doloribus
-                    commodi corrupti ullam neque atque?
+                <h4>As a dedicated web Developer, I'honed a versatile skill set that empowers me to bring creative visions to life in digital realm. MY proficiency spans both front-end and back-end technologies,including HTML,CSS. JavaScript, and a variety of popular frameworks and libraries.
                 </h4>
             </div>
         </div>
@@ -68,19 +64,19 @@
             <div class="box"></div>
             <div class="text3">
                 <h1>Competitive Programming</h1>
-                <h4>Lorem, ipsum dolorcipit beatae! Voluptatibus, nostrum sequi.</h4>
+                <h4>I regularly do competitive coding since I love problem solving.</h4>
             </div>
             <div class="box"></div>
 
             <div class="text3">
-                <h1>Competitive Programming</h1>
-                <h4>Lorem, ipsum dolorcipit beatae! Voluptatibus, nostrum sequi.</h4>
+                <h1>Design and Development</h1>
+                <h4>I have developed many websites and projects </h4>
             </div>
             <div class="box"></div>
 
             <div class="text3">
-                <h1>Competitive Programming</h1>
-                <h4>Lorem, ipsum dolorcipit beatae! Voluptatibus, nostrum sequi.</h4>
+                <h1>Articial Intelligence and Machine Learning</h1>
+                <h4>I am an Artifical Intelligence Enthusiast.</h4>
             </div>
             <div class="box"></div>
         </div>
@@ -99,9 +95,7 @@
                     <div class="row">
                         <div class="icon">1</div>
                         <div class="description">
-                            <h4>Winter</h4>
-                            <p>Winter has so much to offer -
-                                creative activities</p>
+                            <h4>Netflix Clone</h4>
                         </div>
                     </div>
                 </label>
@@ -110,9 +104,7 @@
                     <div class="row">
                         <div class="icon">2</div>
                         <div class="description">
-                            <h4>Digital Technology</h4>
-                            <p>Gets better every day -
-                                stay tuned</p>
+                            <h4>Restaurant WebPage</h4>
                         </div>
                     </div>
                 </label>
@@ -121,8 +113,8 @@
                     <div class="row">
                         <div class="icon">3</div>
                         <div class="description">
-                            <h4>Globalization</h4>
-                            <p>Help people all over the world</p>
+                            <h4>Ultra Edit Clone</h4>
+
                         </div>
                     </div>
                 </label>
@@ -131,9 +123,7 @@
                     <div class="row">
                         <div class="icon">4</div>
                         <div class="description">
-                            <h4>New technologies</h4>
-                            <p>Space engineering becomes
-                                more and more advanced</p>
+                            <h4>Portfolio</h4>
                         </div>
                     </div>
                 </label>
@@ -151,11 +141,10 @@
         <div class="contact">
             <h2>Contact me</h2>
             <div class="social">
-                <a href=""><img src="images/gmail_5968534.png" alt="gmail" width="30px"></a>
-                <a href="/"><img src="images/linkedin_145807.png" alt="linkdin" width="35px"></a>
-                <a href="/"><img src="images/github_5968896.png" alt="github" width="35px"></a>
-                <a href="/"><img src="images/twitter_3670151.png" alt="twitter" width="35px"></a>
-                <a href="/"><img src="images/instagram_3955024.png" alt="instagram" width="35px"></a>
+                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=adityashriwal@gmail.com&su=Your%20Subject&body=Your%20Message"><img src="images/gmail_5968534.png" alt="gmail" width="30px"></a>
+                <a href="https://www.linkedin.com/in/aditya-shriwal2132"><img src="images/linkedin_145807.png" alt="linkdin" width="35px"></a>
+                <a href="https://github.com/Aditya-devop"><img src="images/github_5968896.png" alt="github" width="35px"></a>
+                <a href="https://wa.me/qr/575BYA75FOR2A1"><img src="images/whatsapp.jpg" alt="whatsapp" width="35px"></a>
             </div>
         </div>
         <br>
