--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
 		<div class="row button-section">
 			<div class="col-twelve">
 				<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-				<a href="Aditya's Resume(Updated 2).pdf" title="Download Resume" class="button button-primary">Download
+				<a href="Aditya's Resume(Updated 6).pdf" title="Download Resume" class="button button-primary">Download
 					Resume</a>
-				<a href="StudentGradeHistory_22BCE2132 (1).pdf" title="Download Grade History"
+				<a href="StudentGradeHistory_22BCE2132.pdf" title="Download Grade History"
 					class="button button-primary">Grade history</a>
 			</div>
 		</div>
